Mini SQL Query Change Log
=========================

2010-01-28	ENH: Added a 'copy table name' menu item on the DB Inspector
2010-01-28	ENH: Friendlier truncate table message
2010-01-15	ENH: Added a "SELECT COUNT(*)" option for tables and views
2009-12-18	ENH: Added a bit of a hack of an 'export data' functionality via the 'view table data' option (see 'Export Script...' link under 'Reload Data')
2009-12-10	ENH: quick change to include the column name in the comment of the generated insert sql code
2009-10-06	MOD: Removed all obsolete references in prep for a real release ;-O
2009-09-24	ENH: Finally added drag drop ;-)
2009-09-24	ENH: Added options.
2009-09-22	ENH: added a simple file watcher mechanism to monitor the templates directory (*.mt) and update the tree view.
2009-09-17	ENH: Added some "quick help" for the template editor.
2009-09-16	ENH: Simple syntax highlighting for the template editor.
2009-09-07	ENH: Updated query form, view table form and edit template form to make use of the IPerformTask interface (enabling use of F5 on those windows to "run" the task).
2009-09-02	ENH: Updated the DB Inspector to display the PK/FK info for MSSQL and MSSQL Compact Edition databases.
2009-09-01	ENH: Added Foriegn key ability to the SQL CE providers.
2009-08-30	ENH: Some additions by Kent Carlsle - Minimise to tray and copy selected grid items with/without headers (context menu)
2009-08-28	ENH: Re-implementation of templating using the NVelocity engine
2009-08-26	FIX: Improved handling of db objects with 'unfriendly names' (e.g. spaces etc).
2009-08-26	ENH: Added simple template processing, access to properties of IApplicationServices using braces.
2009-08-21	ENH: Major breaking changes around the collection of the database schemas (See Core.DbModel).
2009-08-21	ENH: Added support for SQL CE 3.5 databases.
2009-07-08	ENH: Added views to the DB Inspector plugin - added "Tables" and "Views" nodes at the root.