@@ -1,6 +1,7 @@
 Mini SQL Query Change Log
 =========================
 
+2010-08-09	ENH: Made exporting with "read only columns" (e.g. PK's) an option
 2010-01-28	ENH: Added a 'copy table name' menu item on the DB Inspector
 2010-01-28	ENH: Friendlier truncate table message
 2010-01-15	ENH: Added a "SELECT COUNT(*)" option for tables and views
